Fixed blurry logo and simplified markup

--- a/src/common/components/defra-heading/_defra-heading.scss
+++ b/src/common/components/defra-heading/_defra-heading.scss
@@ -1,65 +1,33 @@
 @use "govuk-frontend" as *;
 
-.defra-banner {
+.defra-header {
   border-bottom: 8px solid #00a33b;
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  top: -govuk-spacing(4);
-
-  .govuk-grid-row {
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 0 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  padding: govuk-spacing(4) 0;
 }
 
-.defra-internal-service-name {
-  display: table-cell;
-  vertical-align: middle;
-  padding-left: 2em;
+.defra-header__inner {
+  margin: 0 auto;
+  max-width: 960px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 160px;
 }
 
+.defra-header__logo-link {
+  display: block;
+  border-left: 2px solid #00a33b;
+  width: 146px;
+  height: 75px;
+}
 
-.defra-internal-service-name__link {
+.defra-header__service-link {
   text-decoration: none;
   font-size: 24px;
   font-weight: 400;
 }
 
-.defra-internal-service-name__link:link,
-.defra-internal-service-name__link:visited {
+.defra-header__service-link:link,
+.defra-header__service-link:visited {
   color: #0b0c0c;
 }
-
-.defra-logo {
-  border-left: 2px solid #00a33b;
-  padding-left: 8px;
-}
-
-.defra-logo__link {
-  display: table;
-}
-
-.defra-logo__link::before {
-  content: "";
-  display: table-cell;
-  background: url("/public/assets/images/defra_logo.png") no-repeat;
-  background-size: 100% 100%;
-  width: 138px;
-  height: 75px;
-}
-
-.defra-logo__link:link,
-.defra-logo__link:visited {
-  text-decoration: none;
-  font-size: 20px;
-  color: #0b0c0c;
-}
-
